proparse/src/test/resources/data/errors/test04.p
def var x1 as int.

dynamic-function ('foobar', x1).
message x1 
